--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,11 @@
-#app {
-  margin-top: 60px;
+html {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #2c3e50;
-  text-align: center;
+
+  #app {
+    margin-top: 60px;
+    color: #2c3e50;
+    text-align: center;
+  }
 }
