--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,10 +4,10 @@ html {
   -moz-osx-font-smoothing: grayscale;
 
   #app {
-    // margin-top: 60px;
-    // color: #2c3e50;
-    // text-align: center;
     width: 100%;
     height: 100vh;
+    margin-top: 60px;
+    color: #2c3e50;
+    text-align: center;
   }
 }
