feat: 页面基础布局

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,14 @@
 html {
   font-family: Avenir, Helvetica, Arial, sans-serif;
+  font-size: 100px; // 便于rem计算
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
   #app {
     width: 100%;
     height: 100vh;
-    margin-top: 60px;
-    color: #2c3e50;
-    text-align: center;
+    // margin-top: 60px;
+    // color: #2c3e50;
+    // text-align: center;
   }
 }
